# Evidenceops_Agent

./: .gitignore  EVALUATION_REPORT.md  ManualSmokeTest.py  README.md  main.py  pyproject.toml  testAgent.py
app/: config.py  ingest.py  models.py  orchestrator.py  statusEnum.py
app/agents/: research_agent.py
app/api/: main.py
app/services/: index_service.py  llm.py
app/tools/: research_tools.py
data/: ai_governance_overview.md  doc2.md  doc3.md  doc4.md  doc5.md
eval_runs/: run_001.json  run_002.json
reports/: audit_log.jsonl  comparison_of_recommended_controls_for_highimpact_ai_agents.md  why_highimpact_actions_require_approval.md
storage/: default__vector_store.json  docstore.json  index_store.json
tests/: EvaluationResult002.json  EvaluationResult003.json  evaluate.py  evaluationResult.py  evaluation_dataset.jsonl  test_configuration.py  test_research_behavior.py  test_tools.py
