[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evidenceops-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "llama-index>=0.14.23",
    "llama-index-llms-openrouter>=0.5.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]

[tool.setuptools]
# Explicitly name your package instead of letting automatic discovery guess
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
